fixed word wrapping for task description

--- a/src/app.css
+++ b/src/app.css
@@ -533,14 +533,13 @@ input { border: var(--input-border);}
     100%{scale: 1.1;}
 }
 .task-card .task-desc { 
+    height: 20%; width: 100%;
     display: flex; justify-content: center;
     align-items: center; text-align: center;
     font-size: 17px; 
     margin-top: 4;
     margin-bottom: 4;
     color: var(--text-color); 
-    
-    height: 20%;
 }
 .task-card .due-date { 
     display: flex; 
@@ -884,6 +883,13 @@ textarea {
 }
 .task-singlepage-body .multi-property .task-property{
     width: 50%;
+}
+.task-singlepage-body .task-property .task-desc{
+    max-width: 100%;
+    white-space: pre-wrap;
+    word-break: break-all;
+    overflow-wrap: anywhere;      
+    overflow: hidden; 
 }
 @media screen and (max-width: 550px) {
     .task-singlepage-header{gap: 10px;}
